# server/application-server/src/main/java/de/tum/in/www1/hephaestus/intelligenceservice/model/Input.java
@@ -1,263 +1,0 @@
-/*
- * Hephaestus Intelligence Service API
- * API documentation for the Hephaestus Intelligence Service.
- *
- * The version of the OpenAPI document: 0.9.0-rc.5
- * Contact: felixtj.dietrich@tum.de
- *
- * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
- * https://openapi-generator.tech
- * Do not edit the class manually.
- */
-
-
-package de.tum.in.www1.hephaestus.intelligenceservice.model;
-
-import java.util.Objects;
-import java.util.Arrays;
-import com.fasterxml.jackson.annotation.JsonInclude;
-import com.fasterxml.jackson.annotation.JsonProperty;
-import com.fasterxml.jackson.annotation.JsonCreator;
-import com.fasterxml.jackson.annotation.JsonTypeName;
-import com.fasterxml.jackson.annotation.JsonValue;
-import de.tum.in.www1.hephaestus.intelligenceservice.model.CreateDocumentInput;
-import de.tum.in.www1.hephaestus.intelligenceservice.model.GetWeatherInput;
-import de.tum.in.www1.hephaestus.intelligenceservice.model.UpdateDocumentInput;
-import java.math.BigDecimal;
-import com.fasterxml.jackson.annotation.JsonPropertyOrder;
-import com.fasterxml.jackson.annotation.JsonTypeName;
-import org.hibernate.validator.constraints.*;
-
-/**
- * Input
- */
-@JsonPropertyOrder({
-  Input.JSON_PROPERTY_CONTENT,
-  Input.JSON_PROPERTY_KIND,
-  Input.JSON_PROPERTY_TITLE,
-  Input.JSON_PROPERTY_ID,
-  Input.JSON_PROPERTY_LATITUDE,
-  Input.JSON_PROPERTY_LONGITUDE
-})
-@jakarta.annotation.Generated(value = "org.openapitools.codegen.languages.JavaClientCodegen", comments = "Generator version: 7.7.0")
-public class Input {
-  public static final String JSON_PROPERTY_CONTENT = "content";
-  private String content;
-
-  public static final String JSON_PROPERTY_KIND = "kind";
-  private String kind;
-
-  public static final String JSON_PROPERTY_TITLE = "title";
-  private String title;
-
-  public static final String JSON_PROPERTY_ID = "id";
-  private String id;
-
-  public static final String JSON_PROPERTY_LATITUDE = "latitude";
-  private BigDecimal latitude;
-
-  public static final String JSON_PROPERTY_LONGITUDE = "longitude";
-  private BigDecimal longitude;
-
-  public Input() {
-  }
-
-  public Input content(String content) {
-    
-    this.content = content;
-    return this;
-  }
-
-  /**
-   * Get content
-   * @return content
-   */
-  @jakarta.annotation.Nonnull
-  @JsonProperty(JSON_PROPERTY_CONTENT)
-  @JsonInclude(value = JsonInclude.Include.ALWAYS)
-
-  public String getContent() {
-    return content;
-  }
-
-
-  @JsonProperty(JSON_PROPERTY_CONTENT)
-  @JsonInclude(value = JsonInclude.Include.ALWAYS)
-  public void setContent(String content) {
-    this.content = content;
-  }
-
-  public Input kind(String kind) {
-    
-    this.kind = kind;
-    return this;
-  }
-
-  /**
-   * Get kind
-   * @return kind
-   */
-  @jakarta.annotation.Nonnull
-  @JsonProperty(JSON_PROPERTY_KIND)
-  @JsonInclude(value = JsonInclude.Include.ALWAYS)
-
-  public String getKind() {
-    return kind;
-  }
-
-
-  @JsonProperty(JSON_PROPERTY_KIND)
-  @JsonInclude(value = JsonInclude.Include.ALWAYS)
-  public void setKind(String kind) {
-    this.kind = kind;
-  }
-
-  public Input title(String title) {
-    
-    this.title = title;
-    return this;
-  }
-
-  /**
-   * Get title
-   * @return title
-   */
-  @jakarta.annotation.Nonnull
-  @JsonProperty(JSON_PROPERTY_TITLE)
-  @JsonInclude(value = JsonInclude.Include.ALWAYS)
-
-  public String getTitle() {
-    return title;
-  }
-
-
-  @JsonProperty(JSON_PROPERTY_TITLE)
-  @JsonInclude(value = JsonInclude.Include.ALWAYS)
-  public void setTitle(String title) {
-    this.title = title;
-  }
-
-  public Input id(String id) {
-    
-    this.id = id;
-    return this;
-  }
-
-  /**
-   * Get id
-   * @return id
-   */
-  @jakarta.annotation.Nonnull
-  @JsonProperty(JSON_PROPERTY_ID)
-  @JsonInclude(value = JsonInclude.Include.ALWAYS)
-
-  public String getId() {
-    return id;
-  }
-
-
-  @JsonProperty(JSON_PROPERTY_ID)
-  @JsonInclude(value = JsonInclude.Include.ALWAYS)
-  public void setId(String id) {
-    this.id = id;
-  }
-
-  public Input latitude(BigDecimal latitude) {
-    
-    this.latitude = latitude;
-    return this;
-  }
-
-  /**
-   * Get latitude
-   * @return latitude
-   */
-  @jakarta.annotation.Nonnull
-  @JsonProperty(JSON_PROPERTY_LATITUDE)
-  @JsonInclude(value = JsonInclude.Include.ALWAYS)
-
-  public BigDecimal getLatitude() {
-    return latitude;
-  }
-
-
-  @JsonProperty(JSON_PROPERTY_LATITUDE)
-  @JsonInclude(value = JsonInclude.Include.ALWAYS)
-  public void setLatitude(BigDecimal latitude) {
-    this.latitude = latitude;
-  }
-
-  public Input longitude(BigDecimal longitude) {
-    
-    this.longitude = longitude;
-    return this;
-  }
-
-  /**
-   * Get longitude
-   * @return longitude
-   */
-  @jakarta.annotation.Nonnull
-  @JsonProperty(JSON_PROPERTY_LONGITUDE)
-  @JsonInclude(value = JsonInclude.Include.ALWAYS)
-
-  public BigDecimal getLongitude() {
-    return longitude;
-  }
-
-
-  @JsonProperty(JSON_PROPERTY_LONGITUDE)
-  @JsonInclude(value = JsonInclude.Include.ALWAYS)
-  public void setLongitude(BigDecimal longitude) {
-    this.longitude = longitude;
-  }
-
-  @Override
-  public boolean equals(Object o) {
-    if (this == o) {
-      return true;
-    }
-    if (o == null || getClass() != o.getClass()) {
-      return false;
-    }
-    Input input = (Input) o;
-    return Objects.equals(this.content, input.content) &&
-        Objects.equals(this.kind, input.kind) &&
-        Objects.equals(this.title, input.title) &&
-        Objects.equals(this.id, input.id) &&
-        Objects.equals(this.latitude, input.latitude) &&
-        Objects.equals(this.longitude, input.longitude);
-  }
-
-  @Override
-  public int hashCode() {
-    return Objects.hash(content, kind, title, id, latitude, longitude);
-  }
-
-  @Override
-  public String toString() {
-    StringBuilder sb = new StringBuilder();
-    sb.append("class Input {\n");
-    sb.append("    content: ").append(toIndentedString(content)).append("\n");
-    sb.append("    kind: ").append(toIndentedString(kind)).append("\n");
-    sb.append("    title: ").append(toIndentedString(title)).append("\n");
-    sb.append("    id: ").append(toIndentedString(id)).append("\n");
-    sb.append("    latitude: ").append(toIndentedString(latitude)).append("\n");
-    sb.append("    longitude: ").append(toIndentedString(longitude)).append("\n");
-    sb.append("}");
-    return sb.toString();
-  }
-
-  /**
-   * Convert the given object to string with each line indented by 4 spaces
-   * (except the first line).
-   */
-  private String toIndentedString(Object o) {
-    if (o == null) {
-      return "null";
-    }
-    return o.toString().replace("\n", "\n    ");
-  }
-
-}
-
